// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox snapshots tests renders Checkbox component 1`] = `
<WithStyles(ForwardRef(FormControlLabel))
  control={
    <ForwardRef(WithStyles)
      error={false}
      label="This is a test checkbox component"
      onChange={[Function]}
    />
  }
  label="This is a test checkbox component"
/>
`;

exports[`Checkbox snapshots tests should render correct class for error 1`] = `
<WithStyles(ForwardRef(FormControlLabel))
  control={
    <ForwardRef(WithStyles)
      error={false}
      label="This is a test"
      onChange={[Function]}
    />
  }
  label="This is a test"
/>
`;
